# Mobile-Tavern

./: .env.example  .gitattributes  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PROJECT_ISSUES.md  PROMPT_RUNTIME_V2_HANDOFF.md  README.md  RELEASE_NOTES.md  REMINDERS.md  SECURITY.md  TECHNICAL.md  TEST_REPORT.md  TODO.md  _en_keys.txt  _extract_en_keys.cjs  _find_insert.cjs  _gen_translations.cjs  _key_list.txt  _patch_final2.cjs  app-icon.base64  audit_report.md  build-android.cjs  build_log.txt  build_log_csp_fix.txt  build_log_full.txt  build_log_tauri.txt  cargo  cat_bot_proposals.md  cat_bot_todo.md  catgirl_bot_proposals.md  catgirl_bot_todo.md  clean_server.js  create-icon.ts  decode_icon.cjs  decode_icon.js  docker-compose.yml  (+46 more)
.trae/: todo_20250710.md
cloud/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md  docker-compose.yml
cloud/migrations/: .gitkeep  20260718120001_create_users_table.down.sql  20260718120001_create_users_table.up.sql  20260718120002_create_identities_table.down.sql  20260718120002_create_identities_table.up.sql  20260718120003_create_refresh_tokens_table.down.sql  20260718120003_create_refresh_tokens_table.up.sql  20260718120004_add_users_is_active.down.sql  20260718120004_add_users_is_active.up.sql
cloud/postgres-init/: 01-extensions.sql
cloud/src/: config.rs  db.rs  error.rs  health.rs  main.rs  redis.rs  state.rs
cloud/src/account/: handlers.rs  jwt.rs  mod.rs  models.rs  password.rs
docs/: AndroidThemeBridge_Design.md  Android_调试与打包指南.md  CODE_REVIEW_REPORT.md  P0_P1问题修复记录_2026-06-26.md  PROJECT_EXCEPTIONS_AND_TODO.md  Plugin_System_v1.md  Prompt_Composition_Tutorial.md  SillyTavern_MVU_变量卡创建指南.md  TEST_CHAIN_PLAN.md  TEST_REPORT.html  ai_collaboration_guide.md  aliyun_fc_telemetry.md  aliyun_sls_telemetry.md  aliyun_sls_telemetry_sts_extension.md  guide.html  index.html  minSdk升级兼容性评估报告_2026-06-25.md  plugin-development-guide.md  安卓兼容性测试报告_2026-06-25.md  快速通道优化_全环境测试报告_2026-06-26.md  架构审查报告_2026-06-26.md  系统架构评估与缺陷测试报告_2026-06-25.md  综合测试报告与质量评估_2026-06-26.md  记忆系统重构_架构设计_2026-06-27.md
public/: Mobile Tavern 基础预设.json  default_cat_responses.json  default_presets.json  version
scratch/: all_prompts_info.json  analyze_mvu_bundle.cjs  check_webpack_modules.cjs  extract_calls.cjs  extract_openings_render.cjs  extract_schema.cjs  extract_schema_qingqing.cjs  extract_schema_yangzhou.cjs  extract_template.cjs  find_exports.cjs  find_imports.cjs  find_imports_clean.cjs  find_imports_precise.cjs  find_pinia_usage.cjs  find_urls.cjs  inspect_card.cjs  inspect_card_metadata.cjs  inspect_preset.cjs  inspect_yangzhou.cjs  list_logstores.cjs  logical_verify.cjs  logical_verify.js  preset_dump.json  print_exact_imports.cjs  run_bridge_tests.cjs  search_all_imports.cjs  search_bundle.cjs  search_bundle.js  search_full_transcript.cjs  search_logs.cjs  search_string.cjs  substantial_prompts.txt  test_backend.ts  test_bridge.ts  test_bridge_replacements.cjs  test_bridge_runner.ts  test_bundle_processing.cjs  test_catbot_client.ts  test_db_queue.cjs  test_fc_catbot.py  (+12 more)
scripts/: add_imports.cjs  build-android.cjs  bump-version.cjs  check-i18n.ts  check_braces.js  cleanup_colors.cjs  create-icon.ts  crop_icon.py  decode_icon.cjs  download_crate.cjs  download_img.js  encode_icon.cjs  extract-builtin-avatars.cjs  extract_vars.cjs  fetch2.cjs  fetch_repo.cjs  final_cleanup.cjs  final_fix.cjs  find_bounds.cjs  (+38 more)
shared/: Cargo.toml
shared/src/: account.rs  api.rs  lib.rs
src-tauri/: .gitignore  Cargo.toml  tauri.cmd  tauri.conf.json  tauri.js
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/icons/android/values/: ic_launcher_background.xml
src-tauri/plugins/android-bridge/: Cargo.toml  build.rs
src-tauri/plugins/android-bridge/android/: build.gradle.kts  consumer-rules.pro
src-tauri/plugins/android-bridge/android/.tauri/tauri-api/src/main/java/app/tauri/plugin/: Plugin.kt  PluginManager.kt
src-tauri/plugins/android-bridge/android/src/main/: AndroidManifest.xml
src-tauri/plugins/android-bridge/android/src/main/kotlin/com/aitavern/plugin/androidbridge/: AndroidBridgePlugin.kt  AndroidThemeBridge.kt
src-tauri/plugins/android-bridge/guest-js/: index.ts
src-tauri/plugins/android-bridge/permissions/: default.toml  schema.json
src-tauri/plugins/android-bridge/permissions/autogenerated/: reference.md
src-tauri/plugins/android-bridge/permissions/schemas/: schema.json
src-tauri/plugins/android-bridge/src/: lib.rs
src-tauri/src/: lib.rs  main.rs  telemetry.rs
(+442 files in other folders)
