[package]
name = "app"
version = "1.7.0"
description = "A Tauri App"
authors = ["you"]
license = "Apache-2.0"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.2", features = [] }
tauri-plugin-log = "2"
tauri-plugin-http = { version = "2", features = ["unsafe-headers"] }
# Local plugin that injects the AndroidThemeBridge JavascriptInterface into
# the WebView for native safe-area / status-bar / MediaStore file-save support.
# Path-based dependency so the Kotlin sources are version-controlled.
tauri-plugin-android-bridge = { path = "./plugins/android-bridge" }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
chrono = { version = "0.4", features = ["serde"] }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
md5 = "0.7"
tokio = { version = "1", features = ["fs", "time", "sync", "rt-multi-thread"] }

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true
