[package]
name = "tauri-plugin-android-bridge"
version = "0.1.0"
description = "Tauri plugin that injects the AndroidThemeBridge JavascriptInterface into the WebView, providing native safe-area, status-bar and file-save (MediaStore) capabilities for the Mobile Tavern app."
authors = ["Mobile Tavern"]
license = "Apache-2.0"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tauri_plugin_android_bridge"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
tauri = { version = "2", features = [] }
serde = "1"
log = "0.4"

[build-dependencies]
tauri-build = { version = "2", features = [] }
